stylesheet.css
.body {
    height: 100%;
    background-color: black; 
    color: white;

    margin-top: 8%;
    margin-bottom: 0%;
    resize: horizontal;
    line-height: 37px;
}
.logoWithText {
    width: 100%;
    max-height: 120px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.logo {
    margin-top: 2%;
    width: 120px;
    height: 120px;
}
.opener {
    font-family: Comic Sans MS;
    font-size: 150px;
    display: inline-flex;
    margin-inline-start: 30px;
}
.subtext {
    margin-top: 62px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.subtextLabel {
    margin-top: 0%;
    font-size: 30px;
    text-align: center;
    font-family: Comic Sans MS;
}
.download {
    margin-top: -18px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.downloadButton {
    background-image: url(Assets/downloadOnAppStoreIcon.svg);
    background-size: cover;
    background-color: black;
    border-width: 0px;
    width: 295.9px;
    height: 90px;
}

.privacy {
    position: fixed;
    width: 98%;
    bottom: 2%;
    display: flex;
    align-items: right;
    justify-content: right;
}

.privacyButton {
    margin-bottom: 0%;
    height: 24px;
    inline-size: auto;
    resize: both;

    font-family: 'SF Compact Text';
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 100%;
        
    color: #39F3FF;
    background-color: black;
    border-width: 0px;
}

/* mobile-only*/
@media only screen and (max-width: 768px) {
    .body {
        margin-top: 38%;
        line-height: 22px;
    }
    .opener {
        font-size: 72px;
        margin-inline-start: 20px;
    }
    .logo {
        width: 74px;
        height: 74px;
    }
    .subtext {
        margin-top: -8px;
    }
    .subtextLabel {
        font-size: 14px;
    }
    .downloadButton {
        margin-top: 12px;
        width: 161.5px;
        height: 49.12px;
    }
    .privacy {
        align-items: center;
        justify-content: center;
    }
    .privacyButton {
        font-size: 18px;
    }
})

/* iPhone 8 and below */
@media only screen and (max-height: 600px) {
    .body {
        margin-top: 30%
    }
}

@font-face {
    font-family: Comic Sans MS;
    src: url(Assets/Comic-Sans-MS.ttf);
}
@font-face {
    font-family: SFCompactText-Regular;
    src: url(Assets/SF-Compact-Text-Regular.otf);
}

